--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Foodtruck.dk
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -9,10 +9,6 @@
 <ion-content padding>
   The world is your oyster.
   <p>
-    HEJ MED DIG
-    DIN STORE KAJ
-    Jeg elsker kage
-    MEN KAFFE ER GUD
-    ASD
+ TESTING
   </p>
 </ion-content>
