--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,14 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Foodtruck.dk
+      Map
     </ion-title>
+    <ion-buttons end>
+      <button ion-button (click)="addMarker()"><ion-icon name="add"></ion-icon>Add Marker</button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
- TESTING
-  </p>
+<ion-content>
+  <div #map id="map"></div>
 </ion-content>
