Oprettelse af basic profilside

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,6 +3,9 @@
     <ion-title>
       Map
     </ion-title>
+    <ion-buttons>
+      <button (click)="openProfile()" ion-button>profile</button>
+    </ion-buttons>
     <ion-buttons end>
       <button ion-button (click)="addMarker()"><ion-icon name="add"></ion-icon>Add Marker</button>
     </ion-buttons>
