Knap til profilside

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,7 +4,7 @@
       Map
     </ion-title>
     <ion-buttons>
-      <button (click)="openProfile()" ion-button>profile</button>
+      <button (click)="openProfile()" ion-button hidden id="HiddenButton">profile</button>
     </ion-buttons>
     <ion-buttons end>
       <button ion-button (click)="addMarker()"><ion-icon name="add"></ion-icon>Add Marker</button>
