Oprettelse af Menu json fil, opsat tabs og indhold i menuTab

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -48,5 +48,9 @@
 
 
 <ion-content padding>
-  <p>{{ parameterName }}</p>
+  <ion-tabs>
+    <ion-tab [root]="menuPage" [rootParams]="parameterData" tabIcon="star" tabTitle="Menu"></ion-tab>
+    <ion-tab [root]="infoPage" [rootParams]="parameterData" tabIcon="book" tabTitle="Info"></ion-tab>
+    <ion-tab [root]="anmeldelserPage" [rootParams]="parameterData" tabIcon="menu" tabTitle="Anmeldelser"></ion-tab>
+  </ion-tabs>
 </ion-content>
