--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -29,7 +29,7 @@
           </div>
         </button>
 
-        <button ion-button>
+        <button ion-button (click)="routeClicked()">
           <div>
             <ion-icon name="walk"></ion-icon>
             <label class="subTitle">Rute vejledning</label>
